# raytracer

./: Cargo.toml  clock.ppm  draw_scene.ppm  rocket.ppm  sphere.ppm
camera/: Cargo.toml
camera/src/: lib.rs
cannon/: Cargo.toml
cannon/src/: main.rs
canvas/: Cargo.toml
canvas/src/: lib.rs
clock/: Cargo.toml
clock/src/: main.rs
colors/: Cargo.toml
colors/src/: lib.rs
draw_scene/: Cargo.toml
draw_scene/src/: main.rs
draw_sphere/: Cargo.toml
draw_sphere/src/: main.rs
intersections/: Cargo.toml
intersections/src/: lib.rs
lights/: Cargo.toml
lights/src/: lib.rs
materials/: Cargo.toml
materials/src/: lib.rs
matrices/: Cargo.toml
matrices/src/: lib.rs
rays/: Cargo.toml
rays/src/: lib.rs
raytracer-wasm/: Cargo.toml  LICENSE_MIT
raytracer-wasm/src/: lib.rs
raytracer-wasm/www/: index.html  index.js  package-lock.json  package.json
shapes/: Cargo.toml
shapes/src/: lib.rs
spheres/: Cargo.toml
spheres/src/: lib.rs
transformations/: Cargo.toml
transformations/src/: lib.rs
tuples/: Cargo.toml
tuples/src/: lib.rs
world/: Cargo.toml
world/src/: camera.rs  intersections.rs  lib.rs  materials.rs  object.rs  patterns.rs  planes.rs  shape.rs  spheres.rs
world/src/patterns/: checkers.rs  gradient.rs  mod.rs  ring.rs  stripes.rs
world/src/shapes/: mod.rs  planes.rs  spheres.rs
