[package]
name = "spheres"
version = "0.1.0"
authors = ["David Morcillo <david.morcillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
rays = { path = "../rays" }
tuples = { path = "../tuples" }
intersections = { path = "../intersections" }
matrices = { path = "../matrices" }
transformations = { path = "../transformations" }
materials = { path = "../materials" }