[package]
name = "world"
version = "0.1.0"
authors = ["David Morcillo <david.morcillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuples = { path = "../tuples" }
colors = { path = "../colors" }
lights = { path = "../lights" }
spheres = { path = "../spheres" }
matrices = { path = "../matrices" }
transformations = { path = "../transformations" }
rays = { path = "../rays" }
intersections = { path = "../intersections" }