[package]
name = "world"
version = "0.1.0"
authors = ["David Morcillo <david.morcillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
matrices = { path = "../matrices" }
transformations = { path = "../transformations" }
materials = { path = "../materials" }
tuples = { path = "../tuples" }
rays = { path = "../rays" }
lights = { path = "../lights" }
colors = { path = "../colors" }