[package]
name = "world"
version = "0.1.0"
authors = ["David Morcillo <david.morcillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
uuid = { version = "0.7", features = ["v4"] }
matrices = { path = "../matrices" }
transformations = { path = "../transformations" }
tuples = { path = "../tuples" }
rays = { path = "../rays" }
lights = { path = "../lights" }
canvas = { path = "../canvas" }
colors = { path = "../colors" }
lazy_static = "1.4.0"
float-cmp = "0.5.3"
